<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Fundamental2</string>
    <string name="title_activity_my_navbar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Profile</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Profile</string>
    <string name="tab_text_3">Setting</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>

    <string name="width">Lebar</string>
    <string name="result">Hasil</string>
    <string name="calculate_volume">Hitung Volume</string>
    <string name="calculate_surface_area">Hitung Luas Area</string>
    <string name="calculate_circumference">Hitung Keliling</string>
    <string name="height">Tinggi</string>
    <string name="length">Panjang</string>
    <string name="save">Simpan</string>

    <string name="start_task">Start Task</string>
    <string name="status">Status</string>
    <string name="hidden_text">Now you see me!</string>
    <string name="task_completed">Task Completed</string>
    <string name="compressing">Compresssing %d %%</string>

    <string name="start_service">Start Service</string>
    <string name="start_job_intent_service">Start Job Intent Service</string>
    <string name="start_bound_service">Start Bound Service</string>
    <string name="stop_bound_service">Stop bound Service</string>

    <string name="this_sms_receiver_app">Ini Aplikasi Sms Receiver</string>
    <string name="download_file">Download a File</string>
    <string name="coming_from">Coming From</string>
    <string name="this_play">Oii, main kesini jadi ngga? sekarang yak.</string>
    <string name="close">Tutup</string>
    <string name="check_sms_permission">Check SMS Permission</string>
    <string name="incoming_message">Incoming Message</string>
    <string name="from">from : %s</string>

    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Tanggal Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Batalkan Alarm</string>
    <string name="alarm_time">Waktu Alarm</string>

    <string name="quote">When do you think people die? When they are shot through the heart by the bullet of a pistol? No. When they are ravaged by an incurable disease? No. When they drink a soup made from a poisonous mushroom!? No! It’s when… they are FORGOTTEN.</string>
    <string name="author">- Dr. Hiluluk</string>
    <string name="show_list_quotes">Show me list of quotes</string>

    <string name="enter_city_name">Enter city name</string>
    <string name="run_one_time_task">Run One Time Task</string>
    <string name="run_periodic_task">Run Periodic Task</string>
    <string name="cancel_periodic_task">Cancel Periodic Task</string>

    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="description">Click the start button to start the weather task or click the cancel button to cancel the weather task</string>

    <string name="activity_home">Home</string>
    <string name="activity_detail">Detail</string>

    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="open_detail">Open Detail</string>
    <string name="notification_title">Hi, how are you?</string>
    <string name="notification_message">Do you have any plan this weekend? Let\'s hangout</string>
    <string name="detail_title">Hola, Good News</string>
    <string name="detail_message">Now you can learn android in Dicoding</string>

    <string name="temperature">Temperatur</string>
    <string name="name">Nama Kota</string>
    <string name="insert_city">Masukkan id kota misal Jakarta = 1642911</string>
    <string name="search">Cari</string>
    <string name="id_jakarta_bandung_semarang">1642911,1650357,1627896</string>


    <string name="title2">Title</string>
    <string name="description2">Description</string>
    <string name="dateline">Dateline</string>
    <string name="description_course">Deskripsi Kelas</string>
    <string name="example">Example</string>
    <string name="start_learn">Mulai Belajar</string>
    <string name="list_module">Daftar Modul</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu_bookmark">bookmark</string>
    <string name="last_seen">Terakhir dilihat</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="deadline_date">Deadline %s</string>
    <string name="share_text">Segera daftar kelas %s di dicoding.com</string>


    <string name="hello_world">Hello World %1$s, you have %2$d pokes from %3$s</string>
    <string name="good_morning">Good Morning</string>
    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d song found.</item>
        <item quantity="other">%d songs found.</item>
    </plurals>
    <string name="app_homeurl">
       Visit us at <xliff:g id="application_homepage">https://dicoding.com</xliff:g>
    </string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="calculate">calculate</string>
    <string name="title_activity_detail_course">DetailCourseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">button</string>
    <string name="image">image</string>

    <string name="file_new">File New</string>
    <string name="file_open">File Open</string>
    <string name="file_save">File Save</string>
    <dimen name="tiny_margin">8dp</dimen>

    <string name="name_pref">Name</string>
    <string name="email_pred">Email</string>
    <string name="phone_number_pref">No Handphone</string>
    <string name="age_pref">Age</string>
    <string name="yes_pref">Ya</string>
    <string name="no_pref">Tidak</string>
    <string name="save_pref">Simpan</string>
    <string name="love_manchester_united_pref">Suka manchester united?</string>
    <string name="change_pref">Ubah</string>
    <string name="dummy_name_pref">Narenda Wicaksono</string>
    <string name="dummy_email_pref">narenda@dicoding.com</string>
    <string name="dummynumber_pref">123456</string>
    <string name="dummyage_pref">30</string>
    <string name="dummyislove_pref">IsLoveMU</string>

    <string name="nothing">Tidak Ada</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="is_love">Suka Manchester United</string>
    <string name="key_email">email</string>
    <string name="key_age">age</string>
    <string name="key_phone">phone</string>
    <string name="key_love">love</string>
    <string name="key_name">name</string>

    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="start_update">START UPDATE</string>
    <string name="stop_update">STOP UPDATE</string>
    <string name="random">Random: 100</string>
    <string name="generate">Generate</string>

    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>

    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>

</resources>

