<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:padding="16dp"
    android:background="@color/teal_200"
    tools:context=".myReadWriteFile.MyReadWriteMainActivity">


    <EditText
        android:id="@+id/edit_file"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Widget.AppCompat.EditText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header_liner"
        android:background="@color/white"
        android:gravity="top|start"
        android:inputType="textMultiLine|textNoSuggestions"
        android:padding="@dimen/tiny_margin"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:id="@+id/header_liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|start"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_new"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:text="@string/file_new" />

        <Button
            android:id="@+id/button_open"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:layout_marginStart="@dimen/tiny_margin"
            android:text="@string/file_open" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/file_save"
            android:layout_marginStart="@dimen/tiny_margin"
            android:layout_marginBottom="@dimen/tiny_margin" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:background="@color/white"
            android:layout_marginStart="@dimen/tiny_margin"
            android:layout_marginBottom="@dimen/tiny_margin"
            android:importantForAutofill="no"
            android:inputType="text" />


    </LinearLayout>


</RelativeLayout>